# blazy

./: Cargo.toml
src/: main.rs
static/: styles.css
templates/: base.html  index.html  skill.html
