[package]
name = "blazy"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-livereload = "0.9"
tower-http = { version = "0.5", features = ["fs", "compression-gzip"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }

# templates
askama_axum = "0.4"
askama = { version = "0.12.1", features = ["with-axum"] }

# other
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
surrealdb = { version = "1.1.1", features = ["kv-mem"] }

[profile.dev.package.askama_derive]
opt-level = 3
